# verwatch

./: .gitignore  Cargo.toml  README.md  upstream-example.json  wrangler.toml
.github/workflows/: deploy.yml  deploy_backend.yml  deploy_frontend.yml
backend/: Cargo.toml  README.md  wrangler.toml
backend/src/: api.rs  error.rs  lib.rs  logic.rs  project.rs  repository.rs  service.rs
backend/src/project/: adapter.rs  monitor.rs  protocol.rs
backend/src/project/monitor/: tests.rs
backend/src/repository/: adapter.rs  durable_object.rs  protocol.rs  registry.rs  storage_adapter.rs
backend/src/repository/registry/: tests.rs
backend/src/service/: github_gateway.rs
backend/src/utils/: concurrent.rs  github.rs  repository.rs  request.rs  rpc.rs
backend/src/utils/github/: gateway.rs  release.rs
frontend/: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  input.css  package-lock.json  package.json
frontend/assets/: output.css
frontend/src/: api.rs  auth.rs  lib.rs  main.rs  panic_hook.rs  serde_helper.rs
frontend/src/components/: add_project_dialog.rs  dashboard.rs  icons.rs  login.rs
frontend/src/components/add_project_dialog/: basic_info_form.rs  form_state.rs  time_config_section.rs
frontend/src/web/: http.rs  mod.rs  route.rs  router.rs  storage.rs  timer.rs
shared/: Cargo.toml
shared/src/: date.rs  lib.rs  protocol.rs  serde_helper.rs
src/: api.rs  lib.rs  request.rs
