[package]
name = "verwatch"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.1"  # 请检查最新版本，目前常用的是 0.x 系列
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
async-trait = "0.1.89"
uuid = { version = "1.19.0", features = ["v4", "serde", "js"] }
futures = "0.3.31"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }