[package]
name = "verwatch-backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
async-trait = "0.1.89"
futures = "0.3.31"
verwatch-shared = { path = "../shared" }
talc = "4.4.3"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
opt-level = 3     # 最高性能优化 (类似 C++ -O3)
lto = "fat"       # 跨所有 crate 的最大化优化
codegen-units = 1 # 让编译器看到全局代码进行优化
panic = "abort" # 可选，选择 abort 以减少不必要的错误处理开销
