[package]
name = "verwatch-backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "1.0"
console_error_panic_hook = "0.1.7"
async-trait = "0.1.89"
futures = "0.3.31"
verwatch-shared = { path = "../shared" }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
opt-level = "s" 
lto = true
codegen-units = 1
panic = "abort"
strip = true